# ssocr

./: .gitignore  CMakeLists.txt  ssocr.c
CMakeModules/: FindImlib2.cmake
